    - use a flag in shared memory that notes the powersave status of the
      system
    - set/remove that flag in the 00flag script in the pm-utils suite
    - set/remove/query that same flag in powernapd itself
  * debian/control: LP: #637635
    - depend on anacron, to better handle server cronjobs on systems that
      might have been asleep

 -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 09 Aug 2011 15:28:38 -0400

powernap (2.12-0ubuntu1) oneiric; urgency=low

  [ Andres Rodriguez ]
  * Add Initial PowerNap (powerwaked) Server Capabilities:
    - powerwake/*: Add module and Initial ARPMonitor (LP: #737479).
    - powerwaked.conf: Add config file.
    - powerwaked: Add daemon.
    - powerwake-monitor: Add tool to add, delete, list, etc.
  * Package powernap-server:
    - debian/control: Add powerwaked, powerwake-common, powernap-server
    - debian/{powerwaked,powerwake-common}.install: Add
    - debian/powerwaked.upstart: Add upstart job.

  [ Dustin Kirkland ]
  * bin/powerwake:
    - only seed the arp cache if the argument is not already a mac address

 -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 09 Aug 2011 15:28:35 -0400

powernap (2.11-0ubuntu1) oneiric; urgency=low

  * actions/01cpu_online: Delay disabling of CPU's when machine is Desktop
    to allow it to apply template and not crash.

 -- Andres Rodriguez <andreserl@ubuntu.com>  Mon, 20 Jun 2011 18:08:09 -0400

powernap (2.10-0ubuntu1) oneiric; urgency=low

  * Add support for port ranges to TCPMonitor (LP: #760729)
    - powernap/monitors/TCPMonitor.py: Add support.
    - powernap/powernap.py: Ensure that ports are now passed as strings.
    - config: Update to reflect new feature.
  * debian/control:
    - Bump Build-Depends on debhelper.
    - Change python supported version.
    - Update Bzr-VCS to current.
    - Set Dustin as Original maintainer and set myself as maintainer.

 -- Andres Rodriguez <andreserl@ubuntu.com>  Thu, 09 Jun 2011 16:42:59 -0400
