@@ -22,6 +22,8 @@ powernap (2.13) unreleased; urgency=low
   * debian/control: LP: #637635
     - depend on anacron, to better handle server cronjobs on systems that
       might have been asleep
+  * powernap/monitors/InputMonitor.py: LP: #826278
+    - test device path existence before opening, fixes nasty crash
 
  -- Andres Rodriguez <andreserl@ubuntu.com>  Tue, 09 Aug 2011 15:28:38 -0400
 
